# deprecated-bridge-primitives

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: array.rs  lib.rs  runtime.rs
src/chain/: mod.rs  proposal.rs  proxy_type.rs
src/chain/eth/: ethash_proof.rs  header.rs  mmr_proof.rs  mod.rs  receipt.rs
src/chain/ethereum/: mmr_proof.rs  mod.rs  parcel.rs  proof.rs
src/eth/: header.rs  mmr_proof.rs  mod.rs
src/frame/: collective.rs  mod.rs  proxy.rs  relayer_game.rs  sudo.rs
src/frame/ethereum/: backing.rs  game.rs  mod.rs  relay.rs
src/rpc/: mod.rs
src/rpc/eth/: block.rs  mod.rs
