[package]
name = "darwinia-bridge-primitives"
version = "0.0.1"
authors = ["clearloop <udtrokia@gmail.com>"]
description = "Darwinia bridge primitives"
repository = "https://github.com/darwinia-network/bridge-primitives"
license = "MIT"
documentation = "https://docs.rs/bridge-primitives"
homepage = "https://github.com/darwinia-network/bridge-primitives"
include = ["src/**/*", "Cargo.toml", "./README.md"]
keywords = ["blockchain"]
readme = './README.md'
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uint = "0.8.5"
rlp = "0.4.5"

[dependencies.serde]
package = "serde"
version = "1"
features = ["derive"]

[dependencies.parity-scale-codec]
package = "parity-scale-codec"
version = "1"
features = ["derive"]